# Genos

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  requirements.txt
Adaptation/: Dockerfile.metax  Dockerfile.npu  README.md  genos_server.py
Code/: Genos_pretrain_10B.sh  Genos_pretrain_1B.sh
Notebooks/: 01.embedding_en.ipynb  02.ClinVar_variant_predict_en.ipynb  03.RNASeqConvTrack_en.ipynb  04.vllm_example.ipynb
RNA-seq_data_generation/: Case_1_RNA-Seq_Data_Generation.md
SDK/: Genos Python SDK Documentation.md  pyproject.toml  requirements.txt  requirements_docs.txt
SDK/examples/: embedding_extract.py  predict_variant.py  rna_seq_coverage_track_prediction.py
SDK/genos/: __init__.py  client.py  config.py  exceptions.py
SDK/genos/api/: __init__.py  embedding_extractor.py  health.py  rna_seq_coverage_track_prediction.py  variant_predictor.py
SDK/genos/plots/: __init__.py  genomic_track_viewer.py
SDK/genos/utils/: genomic_track_utils.py
Text-genome_model_fusion/: Case_2_Text_Genome_Model_Fusion.md  deploy_dna_llm.py  requirements.txt  sh_temp.sh  sh_train.sh  sh_user.sh  simple_app.py  start_simple.sh  test_simple_api.py  train_dna_only.py  train_dna_qwen.py  user_case.ipynb
Text-genome_model_fusion/bioreason/dataset/: __init__.py  kegg.py  utils.py  variant_effect.py
Text-genome_model_fusion/bioreason/dna_modules/: __init__.py  dna_module.py  nucleotide_module.py
Text-genome_model_fusion/configs/: evo2-1b-8k.yml  evo2-40b-1m.yml  evo2-40b-8k.yml  evo2-7b-1m.yml  evo2-7b-8k.yml
(+18 files in other folders)
